--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
+.carousel-image {
+  object-fit: contain;
+  height: 400px; /* Sesuaikan tinggi sesuai kebutuhan Anda */
+}
+.carousel-image-container {
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.carousel-buttons-container {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  transform: translateY(-50%);
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
+
+.carousel-prev-button,
+.carousel-next-button {
+  font-size: 24px;
+  border-radius: 100%; /* Mengubah border menjadi bulat */
+  background-color: white; /* Mengubah warna background menjadi putih */
+  color: black; /* Mengubah warna teks menjadi hitam */
+  border: none; /* Menghapus border */
+  padding: 5px; /* Menambahkan ruang di sekitar tombol */
+  cursor: pointer;
+}
+
+.carousel-prev-button:hover,
+.carousel-next-button:hover {
+  background-color: #f5f5f5; /* Mengubah warna background saat dihover */
+}
+.carousel-button {
+  border-radius: 50%;
+  background-color: white;
+  color: black;
+  width: 40px;
+  height: 40px;
+  font-size: 18px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.carousel-button:focus {
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-bar-container {
+  display: flex;
+  align-items: center;
+}
+
+.search-bar-container .btn {
+  margin-left: 10px;
+}
+a {
+  color: inherit; /* Menggunakan warna warisan (inherit) dari elemen induk */
+  text-decoration: none; /* Menghapus garis bawah pada tautan */
+}
+.custom-link {
+  color: inherit; /* Warisan warna dari elemen induk */
+  text-decoration: none; /* Tidak ada underline */
+}
+
+.custom-link:hover {
+  color: inherit; /* Warna saat dihover (sesuai elemen induk) */
+  text-decoration: none; /* Tidak ada underline saat dihover */
+}
+.search-form {
+  display: flex;
+  align-items: center;
+}
+
+.search-button {
+  margin-left: 10px;
 }
